making background color theme-able, fixing in dark mode

--- a/covid-19-support/src/themes/NCCovidSupport/SCSS/custom.scss
+++ b/covid-19-support/src/themes/NCCovidSupport/SCSS/custom.scss
@@ -78,6 +78,9 @@ $map-accuracy-outline: $white;
 $navbar-padding-x: 1rem;
 $navbar-padding-y: 0;
 
+$directions-background: #fff;
+$directions-background-dark: $gray-900;
+
 // Define your Bootstrap variable overrides here
 //  $enable-shadows: true;
 //  $enable-gradients: true;
